<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTitle"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineT" />

    <TextView
        android:id="@+id/loginDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loginDetails"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/guidelineTextL"
        app:layout_constraintEnd_toEndOf="@id/guidelineTextR"
        app:layout_constraintTop_toBottomOf="@id/loginTitle" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/emailHint"
        android:gravity="center"
        android:background="@color/input"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/loginDetails"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintEnd_toStartOf="@id/guidelineR"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/passwordHint"
        android:gravity="center"
        android:background="@color/input"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintEnd_toStartOf="@id/guidelineR"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/loginBtn"
        android:textColor="@color/white"
        android:background="@color/primary"
        android:padding="15dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintEnd_toStartOf="@id/guidelineR"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/newAccountBtn"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/bordered_button_primary"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintEnd_toStartOf="@id/guidelineR"/>

    <TextView
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgotPasswordBtn"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@id/guidelineTextL"
        app:layout_constraintEnd_toEndOf="@id/guidelineTextR"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="150dp"
        android:visibility="gone"
        android:indeterminateTintMode="src_in"
        android:indeterminateTint="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/registerBtn"
        app:layout_constraintStart_toStartOf="@id/guidelineTextL"
        app:layout_constraintEnd_toEndOf="@id/guidelineTextR" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineT"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:progressTint="@color/primary"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTextL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTextR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

</androidx.constraintlayout.widget.ConstraintLayout>