<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBarTop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:translationZ="10dp"
        android:indeterminateTintMode="src_in"
        android:indeterminateTint="@color/primary"
        app:layout_constraintTop_toTopOf="@id/mainBackground"
        app:layout_constraintBottom_toBottomOf="@id/mainBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarBottom"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:translationZ="10dp"
        android:indeterminateTintMode="src_in"
        android:indeterminateTint="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/mainBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/noItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/noComments"
        android:textSize="16sp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionBtn" />

    <ImageView
        android:id="@+id/mainBackground"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/test_banner3" />

    <include
        android:id="@+id/banner"
        layout="@layout/game_banner"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginTop="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintEnd_toEndOf="@id/guidelineR"/>

    <Button
        android:id="@+id/descriptionBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descriptionBtn"
        android:textColor="@color/white"
        android:background="@color/primary"
        android:minHeight="35dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintStart_toEndOf="@id/guidelineL"
        app:layout_constraintEnd_toEndOf="@id/guidelineMiddle"/>

    <Button
        android:id="@+id/commentsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/commentsBtn"
        android:textColor="@color/white"
        android:background="@drawable/bordered_button_primary"
        android:minHeight="35dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@id/descriptionBtn"
        app:layout_constraintStart_toEndOf="@id/guidelineMiddle"
        app:layout_constraintEnd_toEndOf="@id/guidelineR"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/guidelineL"
        app:layout_constraintEnd_toEndOf="@id/guidelineR"
        app:layout_constraintTop_toBottomOf="@id/descriptionBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMiddle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>